@@ -104,12 +104,13 @@ struct _log
 	gint selected_line_first;
 	gint selected_line_last;
 	gint total_lines; /* no of lines in the file */
-  gint displayed_lines; /* no of lines displayed now */
+    gint displayed_lines; /* no of lines displayed now */
 	LogLine **lines; /* actual lines */
 	gboolean first_time;
 	gboolean has_date;
 	GtkTreePath *current_path;
 	GtkTreePath *expand_paths[32];
+    GtkTreeModel *model;
 	gboolean expand[32];
 	int versions;
 	int current_version;
@@ -122,10 +123,10 @@ struct _log
 	MonActions alert;
 	GnomeVFSFileOffset mon_offset;
 	GnomeVFSMonitorHandle *mon_handle;
-  GnomeVFSHandle *mon_file_handle;
+    GnomeVFSHandle *mon_file_handle;
 	gboolean monitored;
 
-  gpointer window;
+    gpointer window;
 };
 
 /*
